Adjusted udev rules file name, and added symlink (fixes #4)

--- a/README
+++ b/README
@@ -15,10 +15,10 @@ Requirements
   
   pip install pyusb
 
-- Install udev rules. This is only needed if you want to avoid running the
-  program as root. Install with:
+- Install udev rules (recommended). This is only needed if you want to avoid
+  running the program as root. Install with:
 
-  sudo cp resources/70-ant-usbstick2.rules /etc/udev/rules.d
+  sudo cp resources/ant-usbstick2.rules /etc/udev/rules.d
 
 Usage
 ==============================================================================
