Add information about supported devices
In addition to these two the Forerunner 410 might work. According to
descritiptions this device is similar to the 610. This has not been
tested though.

--- a/README
+++ b/README
@@ -20,6 +20,12 @@ Requirements
 
   sudo cp resources/ant-usbstick2.rules /etc/udev/rules.d
 
+Supported devices
+==============================================================================
+
+ - Forerunner 610
+ - Forerunner 910XT
+
 Usage
 ==============================================================================
 
