Also link to the github site for compatible pyusb version.
(For various reasons I do not use pip).

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/README
+++ b/README
@@ -6,6 +6,10 @@ Requirements
   
   pip install pyusb
 
+  Alternatively you can install it from GitHub:
+
+  https://github.com/walac/pyusb
+
 - Install udev rules (recommended). This is only needed if you want to avoid
   running the program as root. Install with:
 
