--- a/README
+++ b/README
@@ -31,9 +31,9 @@ been able to download data of their watches:
  - Garmin FR70
  - Garmin Swim
 
-It's possible that other manufactures using ANT+/ANT-FS, such as Suunto and
-Timex might work, but have *never* been tested as far as I know. Please let
-me know if you have any success with devices that are not listed here.
+It's possible that other models and other manufactures ausing ANT-FS might
+work, but have *never* been tested as far as I know. Please let me know if
+you have any success with devices that are not listed here.
 
 The following USB sticks are known to work:
 
